--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: java
 jdk:
   - oraclejdk8
+before_install:
+  - chmod +x mvnw
 dist: trusty
 after_success:
   - bash <(curl -s https://codecov.io/bash) -t uuid-repo-token
