--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
 language: java
 jdk:
   - oraclejdk8
-script:
-  - ./mvnw clean install
-  - bash <(curl -s https://codecov.io/bash)
 before_install:
   - chmod +x mvnw
 dist: trusty
+script: "mvn cobertura:cobertura"
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
