--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,11 @@
 			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
+
 <!--		<dependency>-->
 <!--			<groupId>de.codecentric</groupId>-->
 <!--			<artifactId>spring-boot-admin-starter-server</artifactId>-->
@@ -71,6 +76,9 @@
 			<artifactId>modelmapper</artifactId>
 			<version>2.3.0</version>
 		</dependency>
+
+
+
 
 		<dependency>
 			<groupId>io.springfox</groupId>
