configuração de email

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,14 @@
 management.endpoints.web.exposure.include=*
 logging.file=applog.log
 spring.boot.admin.client.url=http://localhost:8090/
+
+#spring.main.banner-mode=off
+
+
+spring.mail.protocol=smtp
+spring.mail.host=smtp.mailtrap.io
+spring.mail.port=2525
+spring.mail.username=1634de96dd409f
+spring.mail.password=86ef39b8ba98f4 
+spring.mail.properties.mail.smtp.auth = true
+spring.mail.properties.mail.smtp.starttls.enable = true
